/*
 * Copyright 2020, TeamDev. All rights reserved.
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

syntax = "proto3";

package spine.chatbot.github;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io.chatbot";
option java_package = "io.spine.chatbot.github.repository.build.event";
option java_outer_classname = "RepositoryBuildEventsProto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

option (every_is).java_type = "io.spine.chatbot.github.repository.RepositoryAwareEvent";

import "spine/chatbot/github/identifiers.proto";
import "spine/chatbot/github/repository_build.proto";

// The build has failed for a repository.
message BuildFailed {

    RepositoryId repository = 1 [(required) = true];

    // The change of the build state.
    BuildStateChange change = 2 [(required) = true];
}

// The build has recovered from the failed state.
message BuildRecovered {

    RepositoryId repository = 1 [(required) = true];

    // The change of the build state.
    BuildStateChange change = 2 [(required) = true];
}

// The build is stable and passing.
message BuildSucceededAgain {

    RepositoryId repository = 1 [(required) = true];

    // The change of the build state.
    BuildStateChange change = 2 [(required) = true];
}

// The build is stable and passing.
message BuildInProgress {

    RepositoryId repository = 1 [(required) = true];
}
